--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,5 @@
 .header{
     height: 124px;
-    background-color: #343a40;
     color:#Dee2e6;
     display: flex;
     justify-content: space-between;
@@ -12,7 +11,8 @@
   }
 
   .header h1{
-      margin-left: 200px;
+      margin-left: 80px;
+      font-size: 45px;
     
 
   }
@@ -27,4 +27,81 @@
 .dropdown {
     display: none;
   }
+
+
+@media (max-width: 1034px){
+  .menu{
+    display: none;
+  }
+
+  .dropdown{
+    width: 250px;
+    background: transparent;
+    position: fixed;
+    right:0;
+    flex-direction: column;
+    justify-content: space-evenly;
+    display:initial;
+    font-size: 25px;
+    cursor: pointer;
+  }
+
+  .mobile-menu{
+    display: flex;
+    height:150px;
+    width:250px;
+    background-color:transparent;
+    color:#Dee2e6;
+    right: 0;
+    margin-right: -150px;
+    margin-top: 210px;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+  .header h1{
+    margin-left: 20px;
+    font-size: 30px;
+  
+
+}
+}
+
+@media(max-width: 671px){
+
+  .header h1{
+    margin-left: -80px;
+  }
+
+}
+
+@media(max-width: 533px){
+  .dropdown{
+    width: 250px;
+    background: transparent;
+    position: fixed;
+    right:0;
+    flex-direction: column;
+    justify-content: space-evenly;
+    display:initial;
+    font-size: 25px;
+    cursor: pointer;
+    margin-right: 20px;
+  }
+
+  .mobile-menu{
+    display: flex;
+    height:150px;
+    width:250px;
+    background-color:transparent;
+    color:#Dee2e6;
+    right: 0;
+    margin-right: -210px;
+    margin-top: 210px;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+
+}
 
