--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -29,7 +29,7 @@
   }
 
 
-@media (max-width: 1034px){
+@media (max-width: 1100px){
   .menu{
     display: none;
   }
@@ -71,6 +71,7 @@
 
   .header h1{
     margin-left: -80px;
+    font-size: 25px;
   }
 
 }
